feat add text on hero
